--- a/src/components/blog/blog.html
+++ b/src/components/blog/blog.html
@@ -20,13 +20,6 @@
 
 <section class="posts-list">
   @for (post of posts; track post.id) {
-    <article class="post-card">
-      <h2>{{ post.title }}</h2>
-      <div class="post-body">
-        <img [src]="post.urlImage" [alt]="post.title">
-        <p>{{ post.body }}</p>
-      </div>
-      <p class="post-date">{{ post.date | date:'dd/MM/yyyy' }}</p>
-    </article>
+    <app-post-card [post]="post"></app-post-card>
   }
 </section>
